# Voxel-generator

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
examples/: demo.py
src/voxel_generator/: __init__.py  cli.py  color.py  depth.py  generator.py  greedy_mesh.py  ingestion.py  projection.py  voxelizer.py
src/voxel_generator/exporters/: __init__.py  gltf_exporter.py  obj_exporter.py  vox_exporter.py
tests/: __init__.py  test_generator.py
